mengubah nama author

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="control">
         <i id="play" class="fa fa-play"></i>
-        <h2>Alep.</h2>
+        <h2>Hamba Allah.</h2>
       </div>
       <script src="main.js"></script>
     </div>
